'CSRF的原理和password的方法和内部模板'

--- a/templates/base_js.html
+++ b/templates/base_js.html
@@ -1,2 +1,2 @@
-<style src="/static/js/jquery.min.js"></style>
-<style src="/static/js/bootstrap.min.js"></style>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
